[project]
name = "rocketsim"
version = "0.1.0"
description = "A demo sim"
authors = [{ name = "John Doe", email = "john.doe@composabl.com" }]
dependencies = [
    "composabl-core"
]

[composabl]
type = "sim"
entrypoint = "rocketsim.sim_impl:SimImpl"
dependencies_system = [] # include additional apt-get packages to be installed

# Include additional data files
[tool.setuptools.packages.find]
where = ["rocketsim"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.pkl"]
